// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DesktopDocumentTechnicalTableResults component Renders correctly when multiple documents are present for asset types 1`] = `
<body>
  <div>
    <div
      class="css-upplgl"
      data-testid="desktop-tech-results-table"
    >
      <div
        class="css-ya57aw"
      >
        <table
          class="MuiTable-root Table-rowNoColor css-wsrw3a-MuiTable-root"
          data-testid="table"
        >
          <thead
            class="MuiTableHead-root ColorPair-pearl css-tv3lba-MuiTableHead-root"
            data-testid="table-head"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head DocumentTechnicalTableResults-headerRow css-47w8l6-MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                scope="col"
              >
                MC: documentLibrary.headers.product
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium DocumentTechnicalTableResults-assetTypeCell css-1tbee56-MuiTableCell-root"
                scope="col"
              >
                asset-code
                <div
                  class="css-upplgl"
                  data-testid="asset-header-tech-results-table"
                >
                  <div
                    class=""
                    data-mui-internal-clone-element="true"
                    data-testid="tooltip"
                  >
                    <button
                      class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-42 Button-text MuiIconButton-sizeLarge css-142qa0u-MuiButtonBase-root-MuiIconButton-root"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium DocumentTechnicalTableResults-tooltipIcon css-i4bv87-MuiSvgIcon-root"
                        data-testid="InfoIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium DocumentTechnicalTableResults-allFilesHeader css-1tbee56-MuiTableCell-root"
                data-testid="download-file"
                scope="col"
              >
                <span
                  class="DocumentTechnicalTableResults-allFilesHeaderWrapper"
                >
                  <svg
                    class="DocumentTechnicalTableResults-allFilesIcon"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 20v-2H5v2Zm0-10h-4V4H9v6H5l7 7Z"
                      fill="currentColor"
                    />
                  </svg>
                  <span>
                    MC: documentLibrary.headers.allFiles
                  </span>
                </span>
              </th>
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-lo7wil-MuiTableCell-root"
              >
                product name
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium DocumentTechnicalTableResults-alignCenter css-1xv4y7i-MuiTableCell-root"
                data-testid="file-does-not-exist-product1-missing-asset-0"
              >
                <svg
                  class="DocumentTechnicalTableResults-noDocumentIcon"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h16v16H0z"
                    fill="none"
                  />
                  <path
                    d="m12.6 11.15-1.4 1.45L8 9.4l-3.15 3.2-1.4-1.45L6.6 8 3.45 4.8l1.4-1.4L8 6.6l3.2-3.2 1.4 1.4L9.45 8Z"
                    fill="currentColor"
                  />
                </svg>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium DocumentTechnicalTableResults-alignCenter css-1xv4y7i-MuiTableCell-root"
              >
                <span
                  aria-label="MC: documents.download.maxReached"
                  class=""
                  data-mui-internal-clone-element="true"
                >
                  <div
                    class="MuiFormControl-root css-kbvs16-MuiFormControl-root"
                  >
                    <label
                      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                    >
                      <span
                        class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary css-17kltuc-MuiButtonBase-root-MuiCheckbox-root"
                        data-testid="download-file-checkbox-product-base-code-0"
                      >
                        <input
                          aria-label="MC: documentLibrary.download product1"
                          class="PrivateSwitchBase-input css-1m9pwf3"
                          data-indeterminate="false"
                          name="product-base-code-0"
                          type="checkbox"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="CheckBoxOutlineBlankIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                          />
                        </svg>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </span>
                    </label>
                  </div>
                </span>
              </td>
            </tr>
            <tr
              class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-lo7wil-MuiTableCell-root"
              >
                product3
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium DocumentTechnicalTableResults-alignCenter css-1xv4y7i-MuiTableCell-root"
                data-testid="file-does-not-exist-product3-missing-asset-0"
              >
                <svg
                  class="DocumentTechnicalTableResults-noDocumentIcon"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h16v16H0z"
                    fill="none"
                  />
                  <path
                    d="m12.6 11.15-1.4 1.45L8 9.4l-3.15 3.2-1.4-1.45L6.6 8 3.45 4.8l1.4-1.4L8 6.6l3.2-3.2 1.4 1.4L9.45 8Z"
                    fill="currentColor"
                  />
                </svg>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium DocumentTechnicalTableResults-alignCenter css-1xv4y7i-MuiTableCell-root"
              />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</body>
`;

exports[`DesktopDocumentTechnicalTableResults component Renders correctly when not all products have all asset types 1`] = `
<body>
  <div>
    <div
      class="css-upplgl"
      data-testid="desktop-tech-results-table"
    >
      <div
        class="css-ya57aw"
      >
        <table
          class="MuiTable-root Table-rowNoColor css-wsrw3a-MuiTable-root"
          data-testid="table"
        >
          <thead
            class="MuiTableHead-root ColorPair-pearl css-tv3lba-MuiTableHead-root"
            data-testid="table-head"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head DocumentTechnicalTableResults-headerRow css-47w8l6-MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                scope="col"
              >
                MC: documentLibrary.headers.product
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium DocumentTechnicalTableResults-assetTypeCell css-1tbee56-MuiTableCell-root"
                scope="col"
              >
                asset-code
                <div
                  class="css-upplgl"
                  data-testid="asset-header-tech-results-table"
                >
                  <div
                    class=""
                    data-mui-internal-clone-element="true"
                    data-testid="tooltip"
                  >
                    <button
                      class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-42 Button-text MuiIconButton-sizeLarge css-142qa0u-MuiButtonBase-root-MuiIconButton-root"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium DocumentTechnicalTableResults-tooltipIcon css-i4bv87-MuiSvgIcon-root"
                        data-testid="InfoIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium DocumentTechnicalTableResults-assetTypeCell css-1tbee56-MuiTableCell-root"
                scope="col"
              >
                asset-code
                <div
                  class="css-upplgl"
                  data-testid="asset-header-tech-results-table"
                >
                  <div
                    class=""
                    data-mui-internal-clone-element="true"
                    data-testid="tooltip"
                  >
                    <button
                      class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-42 Button-text MuiIconButton-sizeLarge css-142qa0u-MuiButtonBase-root-MuiIconButton-root"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium DocumentTechnicalTableResults-tooltipIcon css-i4bv87-MuiSvgIcon-root"
                        data-testid="InfoIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium DocumentTechnicalTableResults-allFilesHeader css-1tbee56-MuiTableCell-root"
                data-testid="download-file"
                scope="col"
              >
                <span
                  class="DocumentTechnicalTableResults-allFilesHeaderWrapper"
                >
                  <svg
                    class="DocumentTechnicalTableResults-allFilesIcon"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 20v-2H5v2Zm0-10h-4V4H9v6H5l7 7Z"
                      fill="currentColor"
                    />
                  </svg>
                  <span>
                    MC: documentLibrary.headers.allFiles
                  </span>
                </span>
              </th>
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-lo7wil-MuiTableCell-root"
              >
                product name
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium DocumentTechnicalTableResults-alignCenter css-1xv4y7i-MuiTableCell-root"
                data-testid="download-file-icon-product1-asset-asset-code"
              >
                <a
                  data-gtm="{"id":"download1","label":"Download","action":"http://localhost:9000/document.pdf"}"
                  data-testid="single-document-download-link"
                  download="pim document title"
                  href="http://localhost:9000/document.pdf"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    class="DocumentTechnicalTableResults-formatIcon format-icon"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h32v32H0z"
                      fill="none"
                    />
                    <path
                      d="M21 2H8v28h21V10Z"
                      fill="#aeb1b1"
                    />
                    <path
                      d="M9 29V3h12v7h7v19Z"
                      fill="#fff"
                    />
                    <rect
                      fill="#d43533"
                      height="10"
                      rx="1"
                      width="21"
                      x="3"
                      y="15"
                    />
                    <g
                      fill="#fff"
                    >
                      <path
                        d="M6 23v-6h1.944c.737 0 2.556.132 2.556 2 0 1.9-1.95 2-2.5 2H7v2Zm1-5v2h.874c.672 0 1.474-.121 1.474-1 0-.814-.7-1-1.551-1ZM11 17h2.214A2.838 2.838 0 0 1 16 19.885V20a2.8 2.8 0 0 1-2.592 2.994.914.914 0 0 0-.128.006H11Zm1 1v4h1.116a1.757 1.757 0 0 0 1.9-1.602v-.004A1.729 1.729 0 0 0 15 20c0-1.628-1.222-2-2.244-2ZM17 23v-6h4v1h-3v1.5h2.5v1H18V23Z"
                      />
                    </g>
                  </svg>
                </a>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium DocumentTechnicalTableResults-alignCenter css-1xv4y7i-MuiTableCell-root"
                data-testid="download-file-icon-product1-asset-asset-code"
              >
                <a
                  data-gtm="{"id":"download1","label":"Download","action":"http://localhost:9000/document.pdf"}"
                  data-testid="single-document-download-link"
                  download="pim document title"
                  href="http://localhost:9000/document.pdf"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    class="DocumentTechnicalTableResults-formatIcon format-icon"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h32v32H0z"
                      fill="none"
                    />
                    <path
                      d="M21 2H8v28h21V10Z"
                      fill="#aeb1b1"
                    />
                    <path
                      d="M9 29V3h12v7h7v19Z"
                      fill="#fff"
                    />
                    <rect
                      fill="#d43533"
                      height="10"
                      rx="1"
                      width="21"
                      x="3"
                      y="15"
                    />
                    <g
                      fill="#fff"
                    >
                      <path
                        d="M6 23v-6h1.944c.737 0 2.556.132 2.556 2 0 1.9-1.95 2-2.5 2H7v2Zm1-5v2h.874c.672 0 1.474-.121 1.474-1 0-.814-.7-1-1.551-1ZM11 17h2.214A2.838 2.838 0 0 1 16 19.885V20a2.8 2.8 0 0 1-2.592 2.994.914.914 0 0 0-.128.006H11Zm1 1v4h1.116a1.757 1.757 0 0 0 1.9-1.602v-.004A1.729 1.729 0 0 0 15 20c0-1.628-1.222-2-2.244-2ZM17 23v-6h4v1h-3v1.5h2.5v1H18V23Z"
                      />
                    </g>
                  </svg>
                </a>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium DocumentTechnicalTableResults-alignCenter css-1xv4y7i-MuiTableCell-root"
              >
                <span
                  aria-label="MC: documents.download.maxReached"
                  class=""
                  data-mui-internal-clone-element="true"
                >
                  <div
                    class="MuiFormControl-root css-kbvs16-MuiFormControl-root"
                  >
                    <label
                      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                    >
                      <span
                        class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary css-17kltuc-MuiButtonBase-root-MuiCheckbox-root"
                        data-testid="download-file-checkbox-product-base-code-0"
                      >
                        <input
                          aria-label="MC: documentLibrary.download product1"
                          class="PrivateSwitchBase-input css-1m9pwf3"
                          data-indeterminate="false"
                          name="product-base-code-0"
                          type="checkbox"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="CheckBoxOutlineBlankIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                          />
                        </svg>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </span>
                    </label>
                  </div>
                </span>
              </td>
            </tr>
            <tr
              class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-lo7wil-MuiTableCell-root"
              >
                product3
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium DocumentTechnicalTableResults-alignCenter css-1xv4y7i-MuiTableCell-root"
                data-testid="file-does-not-exist-product3-missing-asset-0"
              >
                <svg
                  class="DocumentTechnicalTableResults-noDocumentIcon"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h16v16H0z"
                    fill="none"
                  />
                  <path
                    d="m12.6 11.15-1.4 1.45L8 9.4l-3.15 3.2-1.4-1.45L6.6 8 3.45 4.8l1.4-1.4L8 6.6l3.2-3.2 1.4 1.4L9.45 8Z"
                    fill="currentColor"
                  />
                </svg>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium DocumentTechnicalTableResults-alignCenter css-1xv4y7i-MuiTableCell-root"
                data-testid="file-does-not-exist-product3-missing-asset-1"
              >
                <svg
                  class="DocumentTechnicalTableResults-noDocumentIcon"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h16v16H0z"
                    fill="none"
                  />
                  <path
                    d="m12.6 11.15-1.4 1.45L8 9.4l-3.15 3.2-1.4-1.45L6.6 8 3.45 4.8l1.4-1.4L8 6.6l3.2-3.2 1.4 1.4L9.45 8Z"
                    fill="currentColor"
                  />
                </svg>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium DocumentTechnicalTableResults-alignCenter css-1xv4y7i-MuiTableCell-root"
              />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</body>
`;

exports[`DesktopDocumentTechnicalTableResults component Renders correctly when only single documents are present for asset types 1`] = `
<body>
  <div>
    <div
      class="css-upplgl"
      data-testid="desktop-tech-results-table"
    >
      <div
        class="css-ya57aw"
      >
        <table
          class="MuiTable-root Table-rowNoColor css-wsrw3a-MuiTable-root"
          data-testid="table"
        >
          <thead
            class="MuiTableHead-root ColorPair-pearl css-tv3lba-MuiTableHead-root"
            data-testid="table-head"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head DocumentTechnicalTableResults-headerRow css-47w8l6-MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                scope="col"
              >
                MC: documentLibrary.headers.product
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium DocumentTechnicalTableResults-assetTypeCell css-1tbee56-MuiTableCell-root"
                scope="col"
              >
                asset-code
                <div
                  class="css-upplgl"
                  data-testid="asset-header-tech-results-table"
                >
                  <div
                    class=""
                    data-mui-internal-clone-element="true"
                    data-testid="tooltip"
                  >
                    <button
                      class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-42 Button-text MuiIconButton-sizeLarge css-142qa0u-MuiButtonBase-root-MuiIconButton-root"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium DocumentTechnicalTableResults-tooltipIcon css-i4bv87-MuiSvgIcon-root"
                        data-testid="InfoIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium DocumentTechnicalTableResults-allFilesHeader css-1tbee56-MuiTableCell-root"
                data-testid="download-file"
                scope="col"
              >
                <span
                  class="DocumentTechnicalTableResults-allFilesHeaderWrapper"
                >
                  <svg
                    class="DocumentTechnicalTableResults-allFilesIcon"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 20v-2H5v2Zm0-10h-4V4H9v6H5l7 7Z"
                      fill="currentColor"
                    />
                  </svg>
                  <span>
                    MC: documentLibrary.headers.allFiles
                  </span>
                </span>
              </th>
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-lo7wil-MuiTableCell-root"
              >
                product name
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium DocumentTechnicalTableResults-alignCenter css-1xv4y7i-MuiTableCell-root"
                data-testid="file-does-not-exist-product1-missing-asset-0"
              >
                <svg
                  class="DocumentTechnicalTableResults-noDocumentIcon"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h16v16H0z"
                    fill="none"
                  />
                  <path
                    d="m12.6 11.15-1.4 1.45L8 9.4l-3.15 3.2-1.4-1.45L6.6 8 3.45 4.8l1.4-1.4L8 6.6l3.2-3.2 1.4 1.4L9.45 8Z"
                    fill="currentColor"
                  />
                </svg>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium DocumentTechnicalTableResults-alignCenter css-1xv4y7i-MuiTableCell-root"
              >
                <span
                  aria-label="MC: documents.download.maxReached"
                  class=""
                  data-mui-internal-clone-element="true"
                >
                  <div
                    class="MuiFormControl-root css-kbvs16-MuiFormControl-root"
                  >
                    <label
                      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                    >
                      <span
                        class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary css-17kltuc-MuiButtonBase-root-MuiCheckbox-root"
                        data-testid="download-file-checkbox-product-base-code-0"
                      >
                        <input
                          aria-label="MC: documentLibrary.download product1"
                          class="PrivateSwitchBase-input css-1m9pwf3"
                          data-indeterminate="false"
                          name="product-base-code-0"
                          type="checkbox"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="CheckBoxOutlineBlankIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                          />
                        </svg>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </span>
                    </label>
                  </div>
                </span>
              </td>
            </tr>
            <tr
              class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-lo7wil-MuiTableCell-root"
              >
                product3
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium DocumentTechnicalTableResults-alignCenter css-1xv4y7i-MuiTableCell-root"
                data-testid="file-does-not-exist-product3-missing-asset-0"
              >
                <svg
                  class="DocumentTechnicalTableResults-noDocumentIcon"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h16v16H0z"
                    fill="none"
                  />
                  <path
                    d="m12.6 11.15-1.4 1.45L8 9.4l-3.15 3.2-1.4-1.45L6.6 8 3.45 4.8l1.4-1.4L8 6.6l3.2-3.2 1.4 1.4L9.45 8Z"
                    fill="currentColor"
                  />
                </svg>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium DocumentTechnicalTableResults-alignCenter css-1xv4y7i-MuiTableCell-root"
              />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</body>
`;
